them trang da dang nhap

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@ header {
 }
 header .container {
   max-width: 1500px;
-  margin: 10px 20px;
+  margin: 10px auto;
   padding: 0 20px;
   display: flex;
   align-items: center;
@@ -39,16 +39,28 @@ header .container {
   color: #333;
 }
 
+.menu-btn {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+
 header div nav ul {
   display: flex;
+  justify-content: space-between;
+  max-width: 100%;
+  flex-wrap: nowrap;
   list-style: none;
   gap: 25px;
-  margin-left: 700px;
+  margin: 0;
+  padding: 0;
 }
 nav ul li a {
   text-decoration: none;
+  font-size: 14px;
   color: #737373;
-  font-weight: 500;
+  font-weight: bold;
+  white-space: nowrap;
   transition: color 0.2s ease;
 }
 nav ul li a:hover {
@@ -80,10 +92,11 @@ header nav ul li.dropdown {
   list-style: none;
   margin: 0;
   padding: 10px 0;
-  display: block;
+  display: inline-block;
+  width: fit-content;
 }
 .drop-content li a {
-  display: block;
+  display: inline-block;
   color: white;
   padding: 10px 16px;
   text-decoration: none;
@@ -128,6 +141,76 @@ li.dropdown:hover .dropbox {
 .button-login:active {
   transform: scale(0.95);
   background-color: #a64dc7;
+}
+.button-login.logged-btn {
+  background-color: white;
+  color: #737373;
+  font-size: 30px;
+}
+.btn.logged-divbtn {
+  position: relative;
+}
+.btn.logged-divbtn .btn-dropbox {
+  position: absolute;
+  display: flex;
+  top: calc(100% + 1px);
+  left: 50%;
+  transform: translateX(-50%) scale(0.8);
+  transform-origin: top center;
+  background-color: #333;
+  color: white;
+  border-radius: 10px;
+  min-width: 100px;
+  min-height: 80px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  z-index: 10;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: transform 0.35s ease, opacity 0.25s ease;
+}
+.btn .btn-dropbox {
+  opacity: 0;
+  pointer-events: none;
+  display: none;
+  transition: transform 0.35s, opacity 0.25s ease;
+  transform: translateX(-50%) scale(0.8);
+}
+.btn.logged-divbtn .btn-dropcontent {
+  display: block;
+  list-style: none;
+  margin: 0;
+  padding: 10px 0;
+}
+.btn.logged-divbtn .btn-dropcontent li a {
+  display: block;
+  color: white;
+  padding: 10px 16px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  border-radius: 6px;
+}
+.btn.logged-divbtn .btn-droparrow {
+  position: absolute;
+  top: -8px;
+  left: 60%;
+
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #333;
+}
+
+.btn.logged-divbtn:hover .btn-dropbox {
+  opacity: 1;
+  display: flex;
+  transform: scale(1);
+  transform: translate(-50%);
+  pointer-events: auto;
+}
+.btn.logged-divbtn .btn-dropcontent li a:hover {
+  color: #cb6ce6;
 }
 
 .hero {
