--- a/assets/forgot.css
+++ b/assets/forgot.css
@@ -11,7 +11,7 @@ header {
 }
 header .container {
   max-width: 1500px;
-  margin: 0px 20px;
+  margin: 0px auto;
   padding: 0 20px;
   display: flex;
   align-items: center;
@@ -39,16 +39,25 @@ header .container {
   color: #333;
 }
 
+.menu-btn {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+
 header div nav ul {
   display: flex;
   list-style: none;
+  flex-wrap: nowrap;
   gap: 25px;
   margin-left: 700px;
 }
 nav ul li a {
   text-decoration: none;
   color: #737373;
-  font-weight: 500;
+  font-weight: bold;
+  font-size: 14px;
+  white-space: nowrap;
   transition: color 0.2s ease;
 }
 nav ul li a:hover {
