--- a/assets/login.css
+++ b/assets/login.css
@@ -11,7 +11,7 @@ header {
 }
 header .container {
   max-width: 1500px;
-  margin: 0 20px;
+  margin: 0 auto;
   padding: 0 20px;
   display: flex;
   align-items: center;
@@ -39,16 +39,28 @@ header .container {
   color: #333;
 }
 
+.menu-btn {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+
 header div nav ul {
   display: flex;
+  justify-content: space-between;
+  max-width: 100%;
   list-style: none;
+  flex-wrap: nowrap;
   gap: 25px;
-  margin-left: 690px;
+  margin: 0;
+  padding: 0;
 }
 nav ul li a {
   text-decoration: none;
   color: #737373;
-  font-weight: 500;
+  font-weight: bold;
+  white-space: nowrap;
+  font-size: 14px;
   transition: color 0.2s ease;
 }
 nav ul li a:hover {
