--- a/assets/forgot.css
+++ b/assets/forgot.css
@@ -54,14 +54,16 @@ header div nav ul {
 }
 nav ul li a {
   text-decoration: none;
+  font-size: 14px;
   color: #737373;
   font-weight: bold;
-  font-size: 14px;
   white-space: nowrap;
-  transition: color 0.2s ease;
+  display: flex;
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1), color 0.2s ease;
 }
 nav ul li a:hover {
   color: #cb6ce6;
+  transform: scale(1.1);
 }
 
 header nav ul li.dropdown {
@@ -92,11 +94,11 @@ header nav ul li.dropdown {
   display: block;
 }
 .drop-content li a {
-  display: block;
+  display: inline-block;
   color: white;
   padding: 10px 16px;
   text-decoration: none;
-  transition: background-color 0.3s ease;
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1), color 0.2s ease;
   border-radius: 6px;
 }
 .drop-arrow {
@@ -253,6 +255,7 @@ input:focus {
   pointer-events: auto;
   opacity: 1;
   transform: scale(1);
+  transition: color 0.2s ease;
 }
 
 .complete .complete-text a {
@@ -263,7 +266,7 @@ input:focus {
 .complete .complete-text a:hover {
   transform: scale(1.05);
 }
-.complete .complete-text:active {
+.complete .complete-text a:active {
   color: #a64dc7;
   transform: scale(0.95);
 }
