--- a/assets/login.css
+++ b/assets/login.css
@@ -57,14 +57,16 @@ header div nav ul {
 }
 nav ul li a {
   text-decoration: none;
+  font-size: 14px;
   color: #737373;
   font-weight: bold;
   white-space: nowrap;
-  font-size: 14px;
-  transition: color 0.2s ease;
+  display: flex;
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1), color 0.2s ease;
 }
 nav ul li a:hover {
   color: #cb6ce6;
+  transform: scale(1.1);
 }
 
 header nav ul li.dropdown {
@@ -96,11 +98,11 @@ header nav ul li.dropdown {
   display: block;
 }
 .drop-content li a {
-  display: block;
+  display: inline-block;
   color: white;
   padding: 10px 16px;
   text-decoration: none;
-  transition: background-color 0.3s ease;
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1), color 0.2s ease;
   border-radius: 6px;
 }
 .drop-arrow {
