--- a/assets/style.css
+++ b/assets/style.css
@@ -61,10 +61,12 @@ nav ul li a {
   color: #737373;
   font-weight: bold;
   white-space: nowrap;
-  transition: color 0.2s ease;
+  display: flex;
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1), color 0.2s ease;
 }
 nav ul li a:hover {
   color: #cb6ce6;
+  transform: scale(1.1);
 }
 
 header nav ul li.dropdown {
@@ -100,7 +102,7 @@ header nav ul li.dropdown {
   color: white;
   padding: 10px 16px;
   text-decoration: none;
-  transition: background-color 0.3s ease;
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1), color 0.2s ease;
   border-radius: 6px;
 }
 .drop-arrow {
@@ -133,7 +135,7 @@ li.dropdown:hover .dropbox {
   cursor: pointer;
 
   transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1),
-    background-color 0.25s ease;
+    background-color 0s ease;
 }
 .button-login:hover {
   transform: scale(1.05);
@@ -142,10 +144,20 @@ li.dropdown:hover .dropbox {
   transform: scale(0.95);
   background-color: #a64dc7;
 }
+.btn {
+  transition: color 0.2s ease;
+}
 .button-login.logged-btn {
   background-color: white;
   color: #737373;
   font-size: 30px;
+  transform: scale(1);
+
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1), color 0.2s ease;
+}
+.button-login.logged-btn:hover {
+  transform: scale(1.2);
+  color: #cb6ce6;
 }
 .btn.logged-divbtn {
   position: relative;
@@ -187,7 +199,7 @@ li.dropdown:hover .dropbox {
   color: white;
   padding: 10px 16px;
   text-decoration: none;
-  transition: background-color 0.3s ease;
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1), color 0.2s ease;
   border-radius: 6px;
 }
 .btn.logged-divbtn .btn-droparrow {
