--- a/assets/host.css
+++ b/assets/host.css
@@ -229,93 +229,118 @@ li.dropdown:hover .dropbox {
   color: #cb6ce6;
 }
 
-.hero {
-  position: relative;
+main {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.menu-bar {
+  display: block;
+  left: 0;
+  width: 220px;
+  padding: 10px 10px;
+  margin-top: 20px;
+  height: 100%;
+  flex-direction: column;
+  background-color: white;
+  color: #737373;
+  border-right: 3px solid #cb6ce6;
+}
+
+.menu-bar p {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.menu-bar a {
+  color: black;
+  text-decoration: none;
+  margin-left: 10px;
+}
+
+.subject {
   display: flex;
   flex-direction: column;
-  background: linear-gradient(to right, #e3fdf5, #ffe6fa);
-  align-items: flex-start;
-  justify-content: center;
-  text-align: left;
-  margin: 10px 0px;
-  padding: 20px;
-  height: 80vh;
-  width: 100vw;
+  gap: 20px;
+  margin: 20px auto;
 }
-.hero-icon {
-  position: absolute;
-  width: 200px;
-  height: 50px;
-  background-color: #545454;
-  color: white;
+.subject li a {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 30.7px;
-  font-weight: bold;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
-  margin-left: 70px;
-  margin-top: -400px;
-
-  transform: rotate(-5deg);
+  transition: transform 0.3s cubic-bezier(0.25, 1, 0.5, 1), color 0.2s ease;
 }
-
-.hero-slogan ul {
-  list-style: none;
+.subject li a:hover {
+  transform: scale(1.05);
   color: #cb6ce6;
-  font-size: 70px;
+}
+
+.main {
+  margin: 20px 50px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.math .math-title {
+  font-size: 30px;
+}
+
+.math .find {
+  margin: 20px 0;
+  gap: 25px;
+  display: flex;
+  flex-direction: column;
+}
+.math p {
+  font-size: 20px;
   font-weight: bold;
 }
 
-.hero-slogan {
-  position: absolute;
-  max-width: 540px;
-  margin-top: -150px;
-  margin-left: 70px;
-}
-.hero-intro .highlight {
-  color: #cb6ce6;
-  font-weight: bold;
-}
-
-.hero-intro {
-  font-size: 18px;
-  max-width: 540px;
-  position: absolute;
-  margin-top: 100px;
-  margin-left: 70px;
-}
-
-.icon-demo li {
-  list-style: none;
-  transition: transform 0.25s ease, color 0.2s ease;
-}
-.icon-demo li a {
-  text-decoration: none;
-  color: #cb6ce6;
-  font-weight: lighter;
-  transform: scale(1);
-  transition: transform 0.25s ease, color 0.2s ease;
-}
-.icon-demo li:hover {
-  text-decoration: underline;
-  color: #a64dc7;
-  transform: scale(1.1);
-}
-
-.icon-demo {
-  position: absolute;
-  margin-top: 225px;
-  margin-left: 70px;
+.find-main {
   display: flex;
   flex-direction: row;
-  gap: 36px;
+  align-items: center;
+  gap: 30px;
 }
 
-.hero-tag {
-  position: absolute;
-  margin-left: 70px;
-  margin-top: 450px;
-  opacity: 0.5;
+.find-id {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+.find-id input {
+  padding: 10px;
+  width: 150px;
+  height: 30px;
+  border: 2px solid black;
+  border-radius: 8px;
+
+  transition: color 0.2s ease;
+}
+.find-id input:focus {
+  outline: none;
+  border: 2px solid #cb6ce6;
+  background-color: #fdf9ff;
+}
+
+.find-sub {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+.find-sub input {
+  padding: 10px;
+  width: 150px;
+  height: 30px;
+  border: 2px solid black;
+  border-radius: 8px;
+
+  transition: color 0.2s ease;
+}
+.find-sub input:focus {
+  outline: none;
+  border: 2px solid #cb6ce6;
+  background-color: #fdf9ff;
 }
